...
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/add_account_dialog_pin"
        />

    <EditText
        android:layout_margin="16dp"
        android:id="@+id/add_account_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        style="@style/Title2"
        android:hint="Account 1"
        app:layout_constraintBaseline_toBaselineOf="@id/add_account_dialog_name"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:layout_margin="16dp"
        android:id="@+id/add_account_user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        style="@style/Body1"
        android:inputType="number"
        android:hint="1234567890"
        app:layout_constraintBaseline_toBaselineOf="@id/add_account_dialog_user_id"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:layout_margin="16dp"
        android:id="@+id/add_account_bank_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:inputType="numberSigned"
        style="@style/Body1"
        android:hint="123456789"
        app:layout_constraintBaseline_toBaselineOf="@id/add_account_dialog_bank_code"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:layout_margin="16dp"
        android:id="@+id/add_account_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:inputType="numberPassword"
        style="@style/Body1"
        android:hint="1234"
...
