<resources>
    <string name="app_name">AccAnt</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">History</string>
    <string name="title_camera">Scan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Tab titles -->
    <string name="overview_tab">Overview</string>
    <string name="balance_tab">Balance</string>
    <string name="bills_tab">Bills</string>
    <string name="budget_tab">Budget</string>
    <string name="settings_tab">Settings</string>

    <string name="tab_image_text">tab image</string>
    <!-- Create receipt strings -->
    <string name="add_account_string">Add Account</string>
    <string name="add_budget_string">Add Budget</string>
    <string name="add_an_account">Add new account</string>
    <string name="add_a_budget">Add new budget</string>
    <string name="name">Name:</string>
    <string name="user_id">User ID:</string>
    <string name="bank_code_blz">Bank Code (BLZ):</string>
    <string name="password_pin">Password (PIN):</string>
    <string name="save_button_text">Save</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="no_account_selection">Select account</string>
    <string name="no_budget_selection">Select budget</string>
    <string name="total_text">TOTAL</string>
    <string name="total_text_no_capital">Total</string>
    <string name="budget_amount">Amount:</string>
    <string name="budget_account_link">Account:</string>
    <string name="budget_frequency">Frequency:</string>

    <string name="budget_frequency_weekly">weekly</string>
    <string name="budget_frequency_monthly">monthly</string>
    <string name="budget_frequency_yearly">yearly</string>
    <string name="weekly_budget_section_name">Weekly Budget</string>
    <string name="monthly_budget_section_name">Monthly Budget</string>
    <string name="yearly_budget_section_name">Yearly Budget</string>
    <string name="license_info"><![CDATA[
    Ant Icon made by <a href="https://www.flaticon.com/authors/freepik">Freepik</a> from <a href="https://www.flaticon.com/">www.flaticon.com</a>]]>
    </string>
    <string name="discard_receipt_prompt">Discard Receipt?</string>
    <string name="discard_receipt_button_text">discard</string>
    <string name="new_item_hint">New Item</string>
    <string name="new_item_price_hint">0.00</string>
</resources>
