...
        app:layout_constraintTop_toBottomOf="@id/classSummaryChart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/balance_view_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundLight"
        android:clipToPadding="false"
        android:elevation="3dp"
        android:outlineProvider="bounds"
...
